[project]
name = "agno-scylladb-demo"
version = "0.1.0"
description = "Agno + ScyllaDB vector store integration demo"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agno",
    "scylla-driver",
    "pypdf",
    "cassio>=0.1.10",
    "typer>=0.9",
    "sentence-transformers>=5.6.0",
    "groq>=1.5.0",
]
